2025-12-29  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/env.cpp: Trivially refactor.
	(break_output_line): Rename argument from `want_adjustment` to
	`want_forced_adjustment` for clarity.
	(break_without_adjustment): Rename this request handler...
	(break_without_forced_adjustment_request): ...to this.
	(break_with_adjustment): Rename this request handler...
	(break_with_forced_adjustment_request): ...to this.
	(init_env_requests): Update wire-uppery.

2025-12-29  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/env.cpp: Refactor.  More cleanly separate input
	processing logic from engine logic.
	(do_break_request): Rename this...
	(break_output_line): ...to this.  Mark it `static` since it does
	not require external linkage.  Drop its manipulation of the
	input stream via the global `tok` object...
	(break_without_adjustment, break_without_adjustment): ...in
	favor of simply calling `skip_line()` from these handlers for
	the `br` and `brp` requests, which take no arguments.

2025-12-25  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp: Add new Boolean-valued parameter to
	`read_input_until_terminator()`, `want_identifier`, defaulting
	to false, so that we can distinguish callers that want a GNU
	troff identifier from those gathering some other kind of input.
	This is so that can we can reject (all) C0 control and Latin-1
	Supplement characters in identifiers.  (C1 controls are already
	rejected on input.)  The prohibition against C0 controls is to
	make the language less tolerant of unreadable input, and the
	latter is to enable us to pivot to reading UTF-8-encoded input
	in a future release.
	(read_input_until_terminator): Update declaration to add new
	parameter with default value.  Update definition to reject, with
	error diagnostic, character codes less than 32 and greater than
	159.  Add assertion that the putative identifier character is